--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -93,12 +93,13 @@
             }
             .sub-menu__list {
                 position: absolute;
-                background: rgb(49 57 73 / 82%);
+                background: rgba(49, 57, 73, 0.8);
                 display: none;
-                margin-top: 6px;
-                padding-right: 10px;
-                .sub-menu__item {
-                    padding: 10px;
+                margin-top: 2px;
+                gap: 10px;
+                padding: 10px 100px 10px 0px;
+                .sub-menu__item > a {
+                    color: #f6f6f6;
                 }
             }
             & > li:hover .sub-menu__list {
@@ -106,7 +107,6 @@
                 align-items: center;
                 flex-direction: column;
                 gap: 20px;
-                padding: 10px;
             }
         }
 
@@ -207,6 +207,12 @@
         }
         .header__top-icons {
             display: none;
+            .link__item {
+                &:hover {
+                    transition: 0.5s;
+                    transform: rotatey(180deg);
+                }
+            }
         }
     }
 
