--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
 body{
-   background: #F6F6F6;
    font-family: 'Poppins';
 }
 .container {
@@ -45,9 +44,10 @@ body{
          //  }
       }
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@400;500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@400;500;600&display=swap');
        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 @import "footer";
 @import "null";
 @import "product";
 @import "header";
+@import "homepage";
