--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -48,7 +48,7 @@
    display: flex;
    flex-direction: row;
    width: 250px;
-   white-space: nowrapC;
+   white-space: nowrap;
    margin-left:15px;
    margin-top: 27px;
    
