--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -19,6 +19,9 @@
          text-transform: capitalize;
          letter-spacing: 0.04em;
          color: #343434;
+         @media (max-width:414px) {
+            font-size: 40px;
+         }
       }
       .subtitle{
          font-family: 'Poppins';
@@ -131,13 +134,17 @@
          }
       }
       .gray-square{
-         width: 5000px;
+         width: 800px;
          height: 647px;
          background-color: #f6f6f6;
          position: absolute;
          bottom: 0px;
-         right: -4260px;
+         right: 0px;
          z-index: 1;
+         overflow-x: hidden;
+         @media (max-width:1024px) {
+            display: none;
+         }
       }
 }
 .think-sell{
@@ -150,6 +157,9 @@
          position: absolute;
          right:-50px;
          top:62px;
+         @media (max-width:1300px) {
+            right: 0px;
+         }
       }
       .title{
          font-family: 'Playfair Display';
@@ -186,6 +196,16 @@
       display: flex;
       flex-direction: row;
       height: 490px;
+      @media (max-width:991px) {
+         flex-wrap: wrap;
+         height: 830px;
+      }
+             @media (max-width:479px) {
+height: 880px;
+             }
+                          @media (max-width:378px) {
+                           height: 940px;
+                          }
       .left{
          width: 615px;
          display: flex;
@@ -201,6 +221,9 @@
             font-weight: 500;
             font-size: 54px;
             line-height: 72px;
+            @media (max-width:991px) {
+            text-align: center;
+            }
          }
          .about{
             padding-top: 27px;
@@ -230,6 +253,10 @@
          padding-left: 94px;
          display: flex;
          flex-direction: column;
+         @media (max-width:685px) {
+            padding-left: 0px;
+            margin: 0 auto;
+         }
          .punkt{
             width: 490px;
             border: 1px solid black;
@@ -243,6 +270,13 @@
             line-height: 36px;
             padding-left: 44px;
             padding-top: 20px;
+            @media (max-width:515px) {
+                  width: 310px;
+            }
+            @media (max-width:330px) {
+               width: 280px;
+                         }
+
          }
          .punkt:hover{
             transition: 1s;
@@ -264,6 +298,9 @@
       left: -1324px;
       background-color: #F6F6F6;
       z-index: -1;
+      @media (max-width:740px) {
+         display: none;
+      }
    }
    .subtitle{
       letter-spacing: 0.04em;
@@ -305,6 +342,7 @@
    padding-top: 94px;
    height: 873px;
    position: relative;
+
    .subtitle{
       text-align: right;
       letter-spacing: 0.04em;
@@ -314,6 +352,12 @@
       font-weight: 500;
       font-size: 54px;
       line-height: 72px;
+      @media (max-width:1024px) {
+         text-align: center;
+      }
+      @media (max-width:696px) {
+         font-size: 46px;
+      }
    }
    .aboutsubtitle{
       font-family: 'Poppins';
@@ -326,6 +370,12 @@
          margin-top: 174px;
          z-index: 9999;
          position: relative;
+         @media (max-width:425px) {
+            margin-top: 50px;
+         }
+         @media (max-width:388px) {
+            font-size: 25px;
+         }
    }
 .about{
    margin-top: 25px;
@@ -335,12 +385,30 @@
    position: relative;
    z-index: 99993;
    padding: 35px;
+   @media (max-width:620px) {
+      width: 100%;
+   }
+   @media (max-width:513px) {
+      height: 275px;
+   }
+   @media (max-width:470px) {
+      height: 300px;
+   }
+   @media (max-width:418px) {
+      height: 340px;
+   }
+   @media (max-width:367px) {
+      height: 370px;
+   }
          p{
             color: #F6F6F6;
             font-style: normal;
                font-weight: 400;
                font-size: 16px;
                line-height: 24px;
+               @media (max-width:324px) {
+                  font-size: 14px;
+               }
          }
       .button{
          width: 120px;
@@ -365,6 +433,13 @@
       height:593px;
       right:-100px;
       bottom:0px;
+      overflow: hidden;
+      @media (max-width:1373px) {
+         right: 0px;
+      }
+      @media (max-width:991px) {
+      }
+      
       img{
          width: inherit;
          height: inherit;
@@ -372,6 +447,8 @@
       }
             .slick-track {
                display: flex;
+               width: 889px;
+               overflow: hidden;
             }
             .slick-dots{
                position: absolute;
@@ -381,6 +458,13 @@
                flex-direction: row;
                width: 60px;
                justify-content: space-between;
+               @media (max-width:600px) {
+                  left:350px;
+               }
+               @media (max-width:552px) {
+                display: none;
+               }
+              
                li{
                   z-index: 99993;
                   border-radius: 50px;
