--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -88,11 +88,12 @@
                 margin: 0px 10px 0 0px;
             }
             .arrow {
-                display: none;
+                // display: none;
                 width: 0;
                 height: 0;
                 position: absolute;
                 top: 5px;
+                right: -15px;
                 border-top: 10px solid #fff;
                 border-right: 10px solid transparent;
                 border-left: 10px solid transparent;
