--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -227,4 +227,125 @@
         transition: all 2s ease;
         display: none !important;
     }
+    .form__popup-bg {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+        top: 0;
+        display: none;
+        left: 0;
+        background: rgba(30, 40, 50, 0.62);
+        .col__form {
+            display: flex;
+            flex-direction: column;
+        }
+        .close-popup {
+            position: absolute;
+            right: -19px;
+            top: -19px;
+            cursor: pointer;
+        }
+        .form__popup {
+            .gray__m {
+                position: absolute;
+                right: 0;
+                top: 0;
+                z-index: 0;
+            }
+            background-color: #f6f6f6;
+            display: flex;
+            width: 878px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            padding: 50px 70px 70px 70px;
+            .form__title {
+                font-size: 54px;
+                padding-bottom: 60px;
+            }
+            .form__item {
+                display: flex;
+                flex-direction: column;
+                .form__message {
+                    width: 378px;
+                    height: 303px;
+                }
+                input {
+                    margin-right: 97px;
+                }
+            }
+            .form__label {
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 36px;
+                letter-spacing: 0.04em;
+                text-transform: capitalize;
+                color: #000000;
+            }
+            input {
+                width: 263px;
+                height: 49px;
+                margin-top: 10px;
+                background: #ffffff;
+                margin-bottom: 32px;
+                display: flex;
+                align-items: center;
+                padding-left: 27px;
+                font-size: 16px;
+                line-height: 24px;
+            }
+            textarea::placeholder,
+            input::placeholder {
+                font-size: 16px;
+                line-height: 24px;
+                // letter-spacing: 0.04em;
+                text-transform: capitalize;
+                color: #343434;
+            }
+            .message__label {
+                margin-top: 142px;
+            }
+            textarea {
+                font-size: 16px;
+                line-height: 24px;
+                width: 378px;
+                height: 303px;
+                padding: 13px 0 0 27px;
+                position: sticky;
+                z-index: 2;
+                font-family: Poppins;
+                resize: none;
+            }
+            @media (max-width: 895.98px) {
+                flex-direction: column;
+                padding: 35px 25px 25px 25px;
+                width: 100%;
+                // overflow: scroll;
+                margin: 25px auto;
+                .form__title {
+                    font-size: 30px;
+                    padding-bottom: 0;
+                }
+                .close-form__popup {
+                    right: 10px;
+                    top: 10px;
+                }
+                .form__label {
+                    font-size: 15px;
+                }
+                input {
+                    margin-right: 0;
+                    width: 100%;
+                }
+                .message__label {
+                    margin-top: 20px;
+                }
+                textarea {
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
